<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="40dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/about_the_zoo_detail"/>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">
                <View
                    android:id="@+id/dot"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/circle_bg"
                    android:backgroundTint="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/association"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/dot"
                    android:textSize="15dp"
                    android:text="@string/about_bulletin1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">
                <View
                    android:id="@+id/dot2"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/circle_bg"
                    android:backgroundTint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/dot2"
                    android:textSize="15dp"
                    android:text="@string/about_bulletin2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp">
                <View
                    android:id="@+id/dot3"
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/circle_bg"
                    android:backgroundTint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/dot3"
                    android:textSize="15dp"
                    android:text="@string/about_bullentin3"/>
            </LinearLayout>

            <TextView
                android:id="@+id/mission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="15dp"
                android:text="@string/mission"/>


            <!--video here-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>